# opentrack-api

./: .env.example  .gitignore  CLAUDE.md  LICENSE  OPENTRACK_XLSX_EXPORT.md  README.md  competitors_by_club.py  competitors_pdf.py  example.json  example_isonen_input.csv  example_opentrack_output.xlsx  field_cards.py  main.py  opentrack_to_csv.py  opentrack_to_tyrving_csv.py  opentrack_utils.py  pyproject.toml  start_lists.py
.github/: copilot-instructions.md
opentrack_admin/: __init__.py  api.py  browser.py  cli.py  competition.py  config.py  events.py  sync.py  test_attempts.py  test_event_title.py  test_merge.py  test_merged_names.py  test_update_pbs_sb.py
opentrack_reports/: cli.py  competitors_by_club.py  competitors_pdf.py  field_cards.py  opentrack_to_tyrving_csv.py  opentrack_utils.py  start_lists.py  tyrving_calculator.py
pblookup/: __init__.py  events.py  lookup.py  matching.py  models.py  scraper.py  test_matching.py  test_pb_sb_lookup.py  test_result_ranking.py
pblookup/fixtures/: profile_pr.html  profile_sb.html  search_tangen.html
scheduler/: CONSTRAINTS.md  __init__.py  __main__.py  cli.py  constraint_validator.py  csv_exporter.py  dtos.py  event_csv.py  functional_scheduler.py  html_schedule_generator.py  hurdle_plan_generator.py  isonen_parser.py  models.py  opentrack_xlsx_exporter.py  schedule_builder.py  schedule_printer.py  test_grouping.py  test_scheduling_order.py  test_validator.py  types.py
scheduler/goldens/: compare_golden.py  golden-entries-2025-1.xlsx  golden-entries-2025-2.xlsx  golden-entries-2025-3.xlsx  golden-entries-2025-4.xlsx  golden-entries-2025-5.xlsx  (+5 more)
shared/: __init__.py  hurdle_heights.py  implement_weights.py
(+5 files in other folders)
