[project]
name = "opentrack-config"
version = "0.1.0"
description = "Playwright-based automation for administering OpenTrack events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
opentrack = "opentrack_admin.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.4",
]
