[project]
name = "opentrack-config"
version = "0.1.0"
description = "Playwright-based automation for administering OpenTrack events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "pydantic>=2.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.14.3",
    "reportlab>=4.4.1",
    "requests>=2.32.5",
    "ruff>=0.11.7",
    "typer>=0.9.0",
    "z3-solver>=4.15.1.0",
]

[project.scripts]
opentrack = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.4",
    "types-reportlab>=4.4.1.20250822"
]
